--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.14-Alpha,</span>
+<span id="revnumber">versione 0.7.15-Alpha,</span>
 <span id="revdate">2018-11-09</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -556,6 +556,10 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN guidare.                  ---&gt; drive
   CAN indossare.                ---&gt; wear
   CAN inventariare.             ---&gt; i            (+ inv, inventory)
+  CAN lanciare.                 ---&gt; throw
+  CAN lanciare_a.               ---&gt; throw_to
+  CAN lanciare_contro.          ---&gt; throw_at
+  CAN lanciare_in.              ---&gt; throw_in
   CAN lasciare.                 ---&gt; drop         (+ discard, dump, reject)
   CAN legare.                   ---&gt; tie
   CAN legare_a.                 ---&gt; tie_to
@@ -759,10 +763,6 @@ italiano del modulo delle definizioni.</p>
 --CAN switch_on. -----------------&gt; ** VERBO ELIMINATO **
 --CAN switch_off. ----------------&gt; ** VERBO ELIMINATO **
   CAN tear.        -- (+ rip)
-  CAN throw.
-  CAN throw_at.
-  CAN throw_in.
-  CAN throw_to.
   CAN turn.        -- (+ rotate)</code></pre>
 </div>
 </div>
@@ -778,7 +778,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.14-Alpha<br>
+Versione 0.7.15-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
